--- a/views/media.pug
+++ b/views/media.pug
@@ -570,7 +570,7 @@ block content
                         if upload.uploader.verified == true
                             img(src="/images/verified.jpg" width="25px" height="25px" style="opacity:0.75;margin-left:3px;margin-top:-2px;margin-right:5px;border-radius:20px;")
                         if upload.uploader.plan == 'plus'
-                            span.nodetube-pro PLUS
+                            span.srnstreamer-pro PLUS
 
 
 
@@ -1426,7 +1426,7 @@ block extra_js
 block extra_css
   link(rel="stylesheet" href="https://cdn.plyr.io/3.5.10/plyr.css")
   style.
-    .nodetube-pro {
+    .srnstreamer-pro {
         background: #edeeee;
         font-weight: 400;
         font-size: 13px;
