--- a/views/mediaPlayerPartials/reportUploadFunctionalityJs.pug
+++ b/views/mediaPlayerPartials/reportUploadFunctionalityJs.pug
@@ -59,7 +59,7 @@ script.
             if (data == 'success') {
               swal({ title: "Reported", text : 'Thank you for reporting the upload'})
             } else {
-              swal("Something didn't work, please contact NodeTube at ceo@nodetube.org or via the widget in the bottom right corner")
+              swal("Something didn't work, please contact SRNSTREAMER at ceo@srnstreamer.org or via the widget in the bottom right corner")
             }
             console.log(data);
           },
