--- a/views/public/about.pug
+++ b/views/public/about.pug
@@ -34,7 +34,7 @@ block content
                         br
 
                         //h3(style="display:inline")  Please check out the
-                        //        a(style="margin-left:5px" href="https://github.com/mayeaux/nodetube") GitHub Repo
+                        //        a(style="margin-left:5px" href="https://github.com/mayeaux/srnstreamer") GitHub Repo
                         //h3(style="display:inline") &nbspto see the source code and learn more about the application
                         //
                         //br
@@ -42,9 +42,9 @@ block content
                         //        | Join us for collaboration on
                         //        a.left(href='https://discord.gg/ejGah8H') Discord
                         //        | ,
-                        //        a.left(href='https://riot.im/app/#/room/#nodetube:matrix.org') Riot.im (Matrix)
+                        //        a.left(href='https://riot.im/app/#/room/#srnstreamer:matrix.org') Riot.im (Matrix)
                         //        |  and
-                        //        a.left(href='https://reddit.com/r/nodetube') Reddit
+                        //        a.left(href='https://reddit.com/r/srnstreamer') Reddit
 
                         // h3 If you find the project interesting and want to help it succeed please send the link to this live instance and the Github repo around on places like Reddit, Hacker News, Twitter, Facebook, Discord.  Self-promotion is really frowned upon on the internet and the less time I have to do bringing people’s attention to the project the more I can focus on working on improving the software
 
@@ -52,7 +52,7 @@ block content
                         //h3.
                         //        Github Repo Link
                         //h3
-                        //        a(href="https://github.com/mayeaux/nodetube") Github Repo
+                        //        a(href="https://github.com/mayeaux/srnstreamer") Github Repo
                         //
                         ////h3.
                         ////        Live Instance Link
