--- a/views/public/docs.pug
+++ b/views/public/docs.pug
@@ -36,7 +36,7 @@ block content
 
             iframe(width='560', height='315', src='https://newtube.app/embed/7KH5xau', frameborder='0', allowfullscreen='')
 
-            p.videoHeader.fw(style="font-size:24px;margin-top:11px;") How To Use NodeTube
+            p.videoHeader.fw(style="font-size:24px;margin-top:11px;") How To Use SRNSTREAMER
 
             p.fw(style="font-size:18px") Popular Page, Recent Page, Media Page
 
@@ -47,9 +47,9 @@ block content
             br
             br
 
-            //iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
+            //iframe(width='560', height='315', src='https://srnstreamer.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
             //
-            //p.videoHeader.fw(style="font-size:24px") How To Use NodeTube As A User
+            //p.videoHeader.fw(style="font-size:24px") How To Use SRNSTREAMER As A User
 
             //br
             //br
@@ -57,9 +57,9 @@ block content
             //br
             //br
             //
-            //iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
+            //iframe(width='560', height='315', src='https://srnstreamer.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
             //
-            //p.videoHeader.fw(style="font-size:24px") How To Use NodeTube As A Plus User
+            //p.videoHeader.fw(style="font-size:24px") How To Use SRNSTREAMER As A Plus User
             //
             //p.fw(style="font-size:18px") 2GB Max Upload Size, Livestreaming, Unlisted/Private Uploads
             //
@@ -69,13 +69,13 @@ block content
             //br
             //br
 
-            iframe(width='560', height='315', src='https://nodetube.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
+            iframe(width='560', height='315', src='https://srnstreamer.live/embed/7KH5xau', frameborder='0', allowfullscreen='')
 
             p.videoHeader.fw(style="font-size:24px;margin-top:11px;") How To Start Your Own NewTube Instance
 
             p.videoHeader.fw(style="font-size:19px") How To Install NewTube And Have Your Own YouTube Alternative
 
-            p.videoHeader.fw(style="font-size:19px") How To Administrate And Moderate Your NodeTube Instance
+            p.videoHeader.fw(style="font-size:19px") How To Administrate And Moderate Your SRNSTREAMER Instance
 
             p.videoHeader.fw(style="font-size:19px") How To Contribute To The NewTube Codebase
 
