--- a/views/public/help.pug
+++ b/views/public/help.pug
@@ -150,7 +150,7 @@ block content
                   $('.stillToDonate').hide()
 
                 } else {
-                  swal("Something didn't work, please contact NodeTube at ceo@nodetube.live or via the widget in the bottom right corner")
+                  swal("Something didn't work, please contact SRNSTREAMER at ceo@srnstreamer.live or via the widget in the bottom right corner")
                 }
                 console.log(data);
               },
