--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -38,7 +38,7 @@ block content
             padding: 10px;
         }
 
-        .nodetube-pro {
+        .srnstreamer-pro {
             background: #edeeee;
             font-weight: 400;
             font-size: 13px;
@@ -79,7 +79,7 @@ block content
                     if channel.verified == true
                         img(src="/images/verified.jpg" width="25px" height="25px" style="margin-left:3px;margin-top:-2px;margin-right:5px;border-radius:20px;")
                     if channel.plan == 'plus'
-                        span.nodetube-pro PLUS
+                        span.srnstreamer-pro PLUS
 
                 if channel.thumbnailUrl || channel.customThumbnail
                     if channel.customThumbnail
