--- a/views/layoutPartials/footer.pug
+++ b/views/layoutPartials/footer.pug
@@ -18,13 +18,13 @@ footer
 
     a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://discord.gg/ejGah8H" target="_blank") Discord
 
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://github.com/mayeaux/nodetube" target="_blank") GitHub
+    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://github.com/mayeaux/srnstreamer" target="_blank") GitHub
 
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://riot.im/app/#/room/#nodetube:matrix.org" target="_blank") Riot.im
+    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://riot.im/app/#/room/#srnstreamer:matrix.org" target="_blank") Riot.im
 
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://reddit.com/r/nodetube" target="_blank") Reddit
+    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://reddit.com/r/srnstreamer" target="_blank") Reddit
 
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://fosstodon.org/@nodetube" target="_blank") Fosstodon
+    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://fosstodon.org/@srnstreamer" target="_blank") Fosstodon
 
     //a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;")
     //  button(onclick="toggleDarkLight()" class="link-button" id="dark-mode-button" style="") [Dark Mode]
