--- a/views/public/channels.pug
+++ b/views/public/channels.pug
@@ -5,7 +5,7 @@ extends ../layout
 
 block content
     style.
-        .nodetube-pro {
+        .srnstreamer-pro {
             background: #edeeee;
             font-weight: 400;
             font-size: 10px;
@@ -72,7 +72,7 @@ block content
                             if channel.verified == true
                                 img(src="/images/verified.jpg" width="19px" height="19px" style="margin-left:3px;margin-top:-2px;")
                             if channel.plan == 'plus'
-                                span.nodetube-pro PLUS
+                                span.srnstreamer-pro PLUS
 
 
                 div.upload-details(style="margin-top:-56px")
