--- a/views/public/embed.pug
+++ b/views/public/embed.pug
@@ -39,7 +39,7 @@ html
         link(rel="stylesheet" href="/css/sweetalert.css")
 
         link(rel='stylesheet', href='/css/main.css')
-        link(rel='stylesheet', href='/css/nodetube.css')
+        link(rel='stylesheet', href='/css/srnstreamer.css')
 
         
 
