--- a/views/public/mobile.pug
+++ b/views/public/mobile.pug
@@ -56,7 +56,7 @@ block content
 
 
 
-            p.videoHeader.fw(style="font-size:24px;margin-top:11px;") How To Use NodeTube
+            p.videoHeader.fw(style="font-size:24px;margin-top:11px;") How To Use SRNSTREAMER
 
             p.fw(style="font-size:18px") Popular Page, Recent Page, Media Page
 
@@ -146,7 +146,7 @@ block content
                   $('.stillToDonate').hide()
 
                 } else {
-                  swal("Something didn't work, please contact NodeTube at ceo@nodetube.live or via the widget in the bottom right corner")
+                  swal("Something didn't work, please contact SRNSTREAMER at ceo@srnstreamer.live or via the widget in the bottom right corner")
                 }
                 console.log(data);
               },
