--- a/views/viewPartials/adminSensitivityButtons.pug
+++ b/views/viewPartials/adminSensitivityButtons.pug
@@ -61,7 +61,7 @@ if user && user.role == 'admin'
                 if (data == 'success') {
                   window.location.reload(true);
                 } else {
-                  swal("Something didn't work, please contact NodeTube at ceo@nodetube.org or via the widget in the bottom right corner")
+                  swal("Something didn't work, please contact SRNSTREAMER at ceo@srnstreamer.org or via the widget in the bottom right corner")
                 }
                 console.log(data);
               },
