--- a/views/viewPartials/uploadDetailsPopular.pug
+++ b/views/viewPartials/uploadDetailsPopular.pug
@@ -21,4 +21,4 @@ div.upload-details
                 if upload.uploader.verified == true
                     img(src="/images/verified.jpg" width="19px" height="19px" style="margin-left:3px;margin-top:-2px;")
                 if upload.uploader.plan == 'plus'
-                    span.nodetube-pro PLUS
+                    span.srnstreamer-pro PLUS
