--- a/views/viewPartials/mediaDropdown.pug
+++ b/views/viewPartials/mediaDropdown.pug
@@ -8,7 +8,7 @@ div.dropdown(style="display:inline;padding-right:15px;")
             a(href=`/media/recent/1?media=all&category=${category}&within=${within}`) All
         li(role='presentation')
             a(href=`/media/recent/1?media=video&category=${category}&within=${within}`) Videos
-        li(role='presentation')
-            a(href=`/media/recent/1?media=audio&category=${category}&within=${within}`) Audio
+        //- li(role='presentation')
+        //-     a(href=`/media/recent/1?media=audio&category=${category}&within=${within}`) Audio
         li(role='presentation')
             a(href=`/media/recent/1?media=image&category=${category}&within=${within}`) Images
