--- a/views/layoutPartials/footer.pug
+++ b/views/layoutPartials/footer.pug
@@ -6,30 +6,13 @@ style.
 
 footer
   .container.text-center
-    p.pull-left © 2021 #{brandName} &nbsp
+    p.pull-left © 2022 #{brandName} &nbsp
 
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="mailto:contact@newtube.app" target="_blank") Email
 
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://paypal.me/newtubeapp" target="_blank") PayPal
+    //- a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;")
+    //-   button(onclick="toggleDarkLight()" class="link-button" id="dark-mode-button" style="") [Dark Mode]
 
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://twitter.com/newtube_app" target="_blank") Twitter
-
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://www.facebook.com/NewTube-114869126871911" target="_blank") Facebook
-
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://discord.gg/ejGah8H" target="_blank") Discord
-
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://github.com/mayeaux/srnstreamer" target="_blank") GitHub
-
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://riot.im/app/#/room/#srnstreamer:matrix.org" target="_blank") Riot.im
-
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://reddit.com/r/srnstreamer" target="_blank") Reddit
-
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://fosstodon.org/@srnstreamer" target="_blank") Fosstodon
-
-    //a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;")
-    //  button(onclick="toggleDarkLight()" class="link-button" id="dark-mode-button" style="") [Dark Mode]
-
-    a.pull-left(style="color:#aaa;margin-right:10px;" href="/termsofservice") Terms Of Service
+    //- a.pull-left(style="color:#aaa;margin-right:10px;" href="/termsofservice") Terms Of Service
 
 if 1==1
   script.
