--- a/views/mediaBrowsing/recentUploads.pug
+++ b/views/mediaBrowsing/recentUploads.pug
@@ -19,7 +19,7 @@ block content
         br
 
         div.center-block.text-center.col-sm-12
-            h1.fw Recently Uploaded
+            h1.fw Browse Media
 
             br
 
@@ -47,7 +47,7 @@ block content
             else
 
                 div.category.col-sm-12
-                    h2.fw.categoryDisplayName(style="font-size:42px") #{categoryObj.displayName}
+                    //- h2.fw.categoryDisplayName(style="font-size:42px") #{categoryObj.displayName}    //displays All Uploads 
                     br
 
                 each upload in uploads
@@ -60,7 +60,7 @@ block content
 
         include ../viewPartials/adminSensitivityButtons
 
-        div.col-sm-12(style="display:inline")
+        div.center-block.text-center.col-sm-12(style="display:inline")
             include ../viewPartials/pagination
 
 
